static/css/styles.css
.left-col h1 {
  font-size: 65px;
  font-family: Montserrat, sans-serif;
  font-weight: bold;
  text-shadow: 2px 2px 10px rgb(0 0 0);
}
.left-col h4 {
  text-shadow: 2px 2px 10px rgb(0 0 0);
  text-align: left;
  width: 55%;
}
.attr-section .col-md-3 {
  background: linear-gradient( 180deg, rgb(13,75,106) 31%, rgb(0,20,30) 100%);
  padding-top: 10px;
  border: rgba(255,255,255,0.25) solid 0.1px;
  padding-bottom: 10px;
}

.attr-section h6 {
  color: white;
  font-weight: 100;
}

.attr-section h5 {
  color: white;
}

body {
  overflow-x: hidden;
}

.footer-dark .item.social > a:hover {
  color: #3466ac;
  background-color: rgb(255,255,255);
}

.normal-section {
  padding-top: 100px;
  padding-bottom: 50px;
}

.news-content {
  text-align: justify;
  height: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
  
}

#unwhite_logo {
  display: none;
}

.navbar:hover {
  background-color:white;
}

.navbar:hover .nav-item .nav-link {
  color: black !important;
}

.navbar:hover #white_logo {
  display: none;
}
.navbar:hover #unwhite_logo {
  display: block;
}
.navbar:hover .nav-item:hover .nav-link {
  border-bottom: solid #34a4dc 2px;
  padding-bottom: 0px;

}

@media (max-width:1200px) {
  .logo_img {
    height: 50px !important;
  }
  .navbar .nav-item .nav-link {
    font-size: 13px;
  }
  .left-col h1 {
    font-size: 50px !important;
  }
  .left-col h4 {
    font-size: 17px !important;
  }
  .left-col2 h2 {
    font-size: 30px !important;
  }
  .left-col2 h3 {
    font-size: 24px;
  }
  .left-col3 h1 {
    font-size: 40px !important;
  }
  .left-col3 h3 {
    font-size: 20px !important;
  }
  .left-col4 h1 {
    font-size: 30px !important;
  }
  .left-col4 h3 {
    font-size: 20px;
  }
  #at4{
    width: 150px !important;
  }
  #at3{
    width: 60px !important;
  }
  #at2{
    width: 43px !important;
  }
  #at1{
    width: 75px !important;
  }
  .attr-section h5 {
    font-size: 1.15rem;
  }
  .attr-section h6{
    font-size: 0.9rem;
  }
}
@media (max-width:997px) {
  .left-col h1 {
    font-size: 32px !important;
  }
  .left-col h4 {
    font-size: 16px;
    width: 60%;
  }
  .left-col2 h2 {
    font-size: 22px !important;
  }
  .left-col2 h3 {
    font-size: 18px;
  }
  .left-col3 h1 {
    font-size: 34px !important;
  }
  .left-col3 h3 {
    font-size: 18px !important;
  }
  .left-col4 h1 {
    font-size: 24px !important;
  }
  .left-col4 h3 {
    font-size: 18px;
  }
  #at4{
    width: 120px !important;
  }
  #at3{
    width: 55px !important;
  }
  #at2{
    width: 40px !important;
  }
  #at1{
    width: 65px !important;
  }
  .attr-section h5 {
    font-size: 0.9rem;
  }
  .w_shop_105_left_box {
    width: 30% !important;
  }
  .slick-arrow{
    visibility: hidden !important;
  }

}

@media (max-width:767px) {
  .navbar:hover .nav-item .nav-link {
    color: white !important;
  }
  .attr-section .col-md-3{
    background: linear-gradient( 66deg, rgb(13,75,106) 31%, rgb(0,20,30) 100%);
  }
  #at4{
    width: 200px !important;
  }
  #at3{
    width: 70px !important;
  }
  #at2{
    width: 50px !important;
  }
  #at1{
    width: 90px !important;
  }
  .attr-section h5 {
    font-size: 1.25rem;
  }
  .attr-section h6{
    font-size: 1rem;
  }
  .pillar{
    width: 80%;
    margin-left: 10%;
  }
  .w_shop_105_left_box {
    width: 80% !important;
    margin-left: 10%;
  }
  .w_shop_105_left_box > p {
    height: auto !important;
  }
  .blog-slider__content{
    text-align: justify !important;
  }
  .blog-slider__img{
    width: 300px !important; 
  }

  .hero-row {
    padding-top: 13vh !important;
  }
  .left-col h4 {
    margin-top: 50vh;
    width: 100%;
    padding-left: 20%;
    padding-right: 20%;
  }
  .left-col{
    text-align: center;
  }
  .hero-row2{
    padding-top: 70vh !important;
  }
  .left-col4 h1{
    font-size: 30px;
  }
  .carousel-control-prev{
    display: none;
  }
  .carousel-control-next{
    display: none;
  }
  .c_img{
    width: 50% !important;
  }
}

@media (max-width:500px) {
  .left-col h1{
    font-size: 40px !important;
  }
  .hero-row{
    padding-top: 26vh !important;
  }
  .left-col h4 {
      margin-top: 23vh !important;
  }
}


@media all and (max-width: 991px) {
  .navbar .nav-item .nav-link {
    color: black ;
  }
  .navbar {
    background-color: white;
  }
  #white_logo {
    display: none;
  }
  #unwhite_logo {
    display: block;
    width: 40%;
  }
  .navbar:hover .nav-item:hover .nav-link {
    border-bottom: none;
    padding-bottom: 0.5rem;
  
  }


}	
/* ============ mobile view .end// ============ */
#unwhite_logo2 {
  display: none;
}

.nav-iconn {
  font-size: 25px;color: white;
  box-shadow: white 5px 5px 20px -1px;
}
/* .choti-nav{
  background-color: rgba(0,0,0,0.51);
} */
@media(max-width:500px){
.choti-nav {
    background-color: white;
  }
  .nav-iconn {
    color: black !important;
  }
  #unwhite_logo2 {
    display: block;
  }
  #white_logo2 {
    display: none;
  }
 
}






/* MOBILE NAVV */

#burger{
  position: absolute;
  z-index: 5;
  right: 0;
  top: 0;
  color: white;
  background: linear-gradient(45deg, #9682C8 10%, #05BCC9);;
  font-size: 32px;
  padding: 16px 16px 32px 32px;
  border-radius: 0% 0% 0% 100%;
  transition: 1s;
  cursor: pointer;
}

#quit{
  position: absolute;
  z-index: 6;
  top: 0;
  color: white;
  font-size: 32px;
  padding: 16px;
  display: none;
  cursor: pointer;
}

/* #links{
  display: none;
  flex-direction: column;
  width: 100vw;
  height: 50vh;
  padding: 25vh 0;
  justify-content: space-around;
  z-index: 9999;
}

#links a{
  text-align: center;
  text-decoration: none;
  color: white;
  font-size: 2em;
  font-family: 'Roboto';
  z-index: 10;
} */
/*  */
.mob_nav{
  display: none !important;
}

@media (max-width:997px) {
  .mob_nav{
    display: block !important;
  }
  #links{
    display: none;
  }
}

.mob_display{
  position: absolute !important;
  z-index: 10 !important;
  display: block !important;
  top: 100px !important;
  
}
.mob_display .nav-link{
  color: white !important;
  font-size: 20px !important;
}

